--- a/docs/openapi-servers/faq.mdx
+++ b/docs/openapi-servers/faq.mdx
@@ -150,9 +150,18 @@ Just make sure they’re securely configured and publicly reachable (or VPN'd) i
 
 #### 🧪 Q: What if I have an existing MCP server?
 
-**A:** Great news! You can use the mcp-proxy provided in our repo to expose your existing MCP-based tool server as a standard OpenAPI-compatible server. This allows for seamless integration with Open WebUI or other OpenAPI-based agents without needing to rewrite existing logic.
+**A:** Great news! You can use [mcpo](https://github.com/open-webui/mcpo), exposing your existing MCP-based tools as OpenAPI-compatible APIs is now easier than ever. No rewrites, no headaches — just plug and go! 🚀
 
-[Refer to the optional MCP bridge section in the main docs for setup instructions.](https://github.com/open-webui/openapi-servers?tab=readme-ov-file#-bridge-to-mcp-optional)
+If you've already built tools using the MCP protocol, `mcpo` helps you instantly unlock compatibility with Open WebUI and any OpenAPI-based agent — ensuring your hard work remains fully accessible and future-ready.
+
+[Check out the optional Bridge to MCP section in the docs for setup instructions.](https://github.com/open-webui/openapi-servers?tab=readme-ov-file#-bridge-to-mcp-optional)
+
+**Quick Start:**
+```bash
+uvx mcpo --port 8000 -- uvx mcp-server-time --local-timezone=America/New_York
+```
+
+✨ That’s it — your MCP server is now OpenAPI-ready!
 
 ---
 
