--- a/docs/openapi-servers/faq.mdx
+++ b/docs/openapi-servers/faq.mdx
@@ -150,7 +150,7 @@ Just make sure they’re securely configured and publicly reachable (or VPN'd) i
 
 #### 🧪 Q: What if I have an existing MCP server?
 
-**A:** Great news! You can use [mcpo](https://github.com/open-webui/mcpo), exposing your existing MCP-based tools as OpenAPI-compatible APIs is now easier than ever. No rewrites, no headaches — just plug and go! 🚀
+**A:** Great news! You can use our MCP-to-OpenAPI Bridge: [mcpo](https://github.com/open-webui/mcpo), exposing your existing MCP-based tools as OpenAPI-compatible APIs is now easier than ever. No rewrites, no headaches — just plug and go! 🚀
 
 If you've already built tools using the MCP protocol, `mcpo` helps you instantly unlock compatibility with Open WebUI and any OpenAPI-based agent — ensuring your hard work remains fully accessible and future-ready.
 
