enh: tool server integrations

--- a/docs/openapi-servers/open-webui.mdx
+++ b/docs/openapi-servers/open-webui.mdx
@@ -69,6 +69,23 @@ Clicking this icon opens a popup where you can:
 
 ![Tool Info Modal Expanded](/images/openapi-servers/open-webui/info-modal.png)
 
+---
+
+## (Optional) Step 4: Use "Native" Function Calling (ReACT-style) Tool Use 🧠
+
+:::info
+For this to work effectively, **your selected model must support native tool calling**. Some local models claim support but often produce poor results. We strongly recommend using GPT-4o or another OpenAI model that supports function calling natively for the best experience.
+:::
+
+Want to enable ReACT-style (Reasoning + Acting) native function calls directly inside your conversations? You can switch Open WebUI to use native function calling.
+
+✳️ How to enable native function calling:
+
+1. Open the chat window.
+2. Go to ⚙️ **Chat Controls > Advanced Params**.
+3. Change the **Function Calling** parameter from `Default` to `Native`.
+
+![Native Tool Call](/images/openapi-servers/open-webui/native.png)
 
 ---
 
