--- a/docs/openapi-servers/mcp.mdx
+++ b/docs/openapi-servers/mcp.mdx
@@ -17,7 +17,7 @@ That’s a strength—but also a limitation.
 
 If you want to deploy your main interface (like Open WebUI) on the cloud, you quickly run into a problem: your cloud instance can’t speak directly to an MCP server running locally on your machine via stdio.
 
-That’s where mcpo comes in with a game-changing solution.
+[That’s where mcpo comes in with a game-changing solution.](https://github.com/open-webui/mcpo)
 
 MCP servers typically rely on raw stdio communication, which is:
 
