feat: enhance document extraction capabilities with new tutorials and integrations for Apache Tika and Docling

--- a/docs/features/chat-features/index.mdx
+++ b/docs/features/chat-features/index.mdx
@@ -1,4 +1,18 @@
 ---
 sidebar_position: 1
-title: "😏 Chat Features"
+title: "💬 Chat Features"
 ---
+
+# Chat Features Overview
+
+Open WebUI provides a comprehensive set of chat features designed to enhance your interactions with AI models. This page provides an overview of the key chat capabilities, with links to dedicated pages for more detailed information.
+
+## Core Chat Features
+
+- **[🗂️ Conversation Organization](./conversation-organization.md)**: Organize chats with folders and tags to keep your workspace tidy and structured.
+
+- **[🔗 URL Parameters](./url-params.md)**: Configure chat sessions through URL parameters, enabling quick setup of models, tools, and other features.
+
+- **[⚙️ Chat Parameters](./chat-params.md)**: Control system prompts and advanced parameters at different levels (per-chat, per-account, or per-model).
+
+- **[🗨️ Chat Sharing](./chatshare.md)**: Share conversations locally or via the Open WebUI Community platform with controllable privacy settings.
