Adding Helicone to the list of OpenAI compatible services
LLM observability is crucial for anyone deploying an AI application to production. 

I'm adding Helicone here to give exposure to an open-source OpenA-compatible service that the Web OpenUI community can leverage to monitor, debug, and improve their applications.

--- a/docs/getting-started/quick-start/starting-with-openai.mdx
+++ b/docs/getting-started/quick-start/starting-with-openai.mdx
@@ -19,7 +19,7 @@ You can use:
 
 - OpenAI directly (https://platform.openai.com/account/api-keys)
 - Azure OpenAI
-- An OpenAI-compatible service (e.g., LocalAI, FastChat, etc.)
+- An OpenAI-compatible service (e.g., LocalAI, FastChat, Helicone, etc.)
 
 👉 Once you have the key, copy it and keep it handy.
 
