--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -86,7 +86,7 @@ Let’s break it down:
 
 This is the default setting in Open WebUI.
 
-Here, your LLM doesn’t need to natively support function calling. Instead, we guide the model using smart prompts (ReACT-style — Reasoning + Acting) to select and use a Tool.
+Here, your LLM doesn’t need to natively support function calling. Instead, we guide the model using smart tool selection prompt template to select and use a Tool.
 
 ✅ Works with almost any model  
 ✅ Great way to unlock Tools with basic or local models  
