--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -11,7 +11,7 @@ To use Tools, your chosen LLM must support "function calling". Think of Tools as
 
 ---
 
-# 🚀 What Can Tools Help Me Do?
+## 🚀 What Can Tools Help Me Do?
 
 Here are just a few examples of what Tools let your AI assistant do:
 
@@ -25,7 +25,7 @@ Explore ready-to-use tools here:
 ---
 
 
-# 📦 How to Install Tools
+## 📦 How to Install Tools
 
 There are two easy ways to install Tools in Open WebUI:
 
@@ -39,7 +39,7 @@ There are two easy ways to install Tools in Open WebUI:
 ---
 
 
-# 🔧 How to Use Tools in Open WebUI
+## 🔧 How to Use Tools in Open WebUI
 
 Once you've installed Tools (we’ll show you how below), here’s how to enable and use them:
 
@@ -71,7 +71,7 @@ You can also let your LLM auto-select the right Tools using the AutoTool Filter:
 
 ---
 
-# 🧠 Choosing How Tools Are Used: Default vs Native
+## 🧠 Choosing How Tools Are Used: Default vs Native
 
 Once Tools are enabled for your model, Open WebUI gives you two different ways to let your LLM use them in conversations.
 
@@ -126,7 +126,7 @@ Choose the one that works best for your setup — and remember, you can always s
 
 ---
 
-# 🧠 Summary
+## 🧠 Summary
 
 Tools are add-ons that help your AI model do much more than just chat. From answering real-time questions to generating images or speaking out loud — Tools bring your AI to life.
 
