--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -117,8 +117,8 @@ That’s it! Your chat is now using true native Tool support (as long as the mod
 
 | Mode     | Who it’s for                     | Pros                                    | Cons                                 |
 |----------|----------------------------------|-----------------------------------------|--------------------------------------|
-| Default  | Any model, even local ones       | Broad compatibility, safer, flexible    | May be less accurate or slower       |
-| Native   | GPT-4o, GPT-3.5 turbo, etc.       | Fast, smart, excellent tool chaining     | Needs proper function call support   |
+| Default  | Any model                         | Broad compatibility, safer, flexible    | May be less accurate or slower       |
+| Native   | GPT-4o, etc.                      | Fast, smart, excellent tool chaining     | Needs proper function call support   |
 
 Choose the one that works best for your setup — and remember, you can always switch on the fly via Chat Controls.
 
