--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -104,6 +104,8 @@ If your model does support “native” function calling (like GPT-4o or GPT-3.5
 
 Want to enable native function calling in your chats? Here's how:
 
+![Chat Controls](/images/features/plugin/tools/chat-controls.png)
+
 1. Open the chat window with your model.
 2. Click ⚙️ Chat Controls > Advanced Params.
 3. Look for the Function Calling setting and switch it from Default → Native
