--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -45,7 +45,13 @@ Once you've installed Tools (we’ll show you how below), here’s how to enable
 
 You have two ways to enable a Tool for your model:
 
-### ✏️ Option 1: Enable by Default (Recommended for Frequent Use)
+### ➕ Option 1: Enable from the Chat Window
+
+While chatting, click the ➕ icon in the input area. You’ll see a list of available Tools — you can enable any of them on the fly for that session.
+
+💡 Tip: Enabling a Tool gives the model permission to use it — but it may not use it unless it's useful for the task.
+
+### ✏️ Option 2: Enable by Default (Recommended for Frequent Use)
 1. Go to: Workspace ➡️ Models
 2. Choose the model you’re using (like GPT-4 or LLaMa2) and click the ✏️ edit icon.
 3. Scroll down to the “Tools” section.
@@ -54,20 +60,13 @@ You have two ways to enable a Tool for your model:
 
 This ensures the model always has these Tools ready to use whenever you chat with it.
 
-### ➕ Option 2: Enable from the Chat Window
-
-While chatting, click the ➕ icon in the input area. You’ll see a list of available Tools — you can enable any of them on the fly for that session.
-
-💡 Tip: Enabling a Tool gives the model permission to use it — but it may not use it unless it's useful for the task.
-
 You can also let your LLM auto-select the right Tools using the AutoTool Filter:
 
 🔗 [AutoTool Filter](https://openwebui.com/f/hub/autotool_filter/)
 
-🎯 Note: Even when using AutoTool, you still need to enable your Tools using one of the two methods above.
+🎯 Note: Even when using AutoTool, you still need to enable your Tools using Option 2.
 
 ✅ And that’s it — your LLM is now Tool-powered! You're ready to supercharge your chats with web search, image generation, voice output, and more.
-
 
 ---
 
