--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -7,7 +7,7 @@ title: "⚙️ Tools"
 
 Tools are small Python scripts that add superpowers to your LLM. When enabled, they allow your chatbot to do amazing things — like search the web, scrape data, generate images, talk back using AI voices, and more.
 
-To use Tools, your chosen LLM must support "function calling". Think of Tools as useful plugins that your AI can use when chatting with you.
+Think of Tools as useful plugins that your AI can use when chatting with you.
 
 ---
 
