--- a/docs/openapi-servers/open-webui.mdx
+++ b/docs/openapi-servers/open-webui.mdx
@@ -49,6 +49,35 @@ Next, connect your running tool server to Open WebUI:
 
 ![Settings Page](/images/openapi-servers/open-webui/settings.png)
 
+
+
+### 👉 Optional: Using a Config File with mcpo
+
+If you're running multiple tools through mcpo using a config file, take note:
+
+🧩 Each tool is mounted under its own unique path!
+
+For example, if you’re using memory and time tools simultaneously through mcpo, they’ll each be available at a distinct route:
+
+- http://localhost:8000/time
+- http://localhost:8000/memory
+
+This means:
+
+- When connecting a tool in Open WebUI, you must enter the full route to that specific tool — do NOT enter just the root URL (http://localhost:8000).
+- Add each tool individually in Open WebUI Settings using their respective subpath URLs.
+
+✅ Good:
+
+http://localhost:8000/time  
+http://localhost:8000/memory
+
+🚫 Not valid:
+
+http://localhost:8000
+
+This ensures Open WebUI recognizes and communicates with each tool server correctly.
+
 ---
 
 ## Step 3: Confirm Your Tool Server Is Connected ✅
