--- a/docs/openapi-servers/open-webui.mdx
+++ b/docs/openapi-servers/open-webui.mdx
@@ -56,7 +56,7 @@ There are two ways to register tool servers in Open WebUI:
 #### 1. User Tool Servers (added via regular Settings)
 
 - Only accessible to the user who registered the tool server.
-- The connection is made directly from the backend (server-side) on behalf of that user.
+- The connection is made directly from the browser (client-side) by the user.
 - Perfect for personal workflows or when testing custom/local tools.
 
 #### 2. Global Tool Servers (added via Admin Settings)
