--- a/docs/openapi-servers/open-webui.mdx
+++ b/docs/openapi-servers/open-webui.mdx
@@ -83,6 +83,8 @@ This means:
 - When connecting a tool in Open WebUI, you must enter the full route to that specific tool — do NOT enter just the root URL (http://localhost:8000).
 - Add each tool individually in Open WebUI Settings using their respective subpath URLs.
 
+![MCPO Config Tools Setting](/images/openapi-servers/open-webui/mcpo-config-tools.png)
+
 ✅ Good:
 
 http://localhost:8000/time  
