--- a/docs/features/plugin/functions/parser.mdx
+++ b/docs/features/plugin/functions/parser.mdx
@@ -20,31 +20,85 @@ In this situation, you can write your own Parser that will handle the process in
 
 ### 🦴 Basic Skeleton of a Parser
 
-The basics of a Parser are extremely simple. Only two attributes and a single method are required:
+A parser requires 2 attributes and 5 methods. There is an optional 6th method:
 
 ```python
-from open_webui.utils.parser import PARSER_TYPE
+from open_webui.utils.parser import PARSER_TYPE, ParserInterface
 
-class Parser:
+class Parser(ParserInterface):
     def __init__(self):
         self.name = "Custom Parser"
         self.parser_type = PARSER_TYPE.ALL
 
-    def save_docs_to_vector_db(self,
-                               request: Request,
-                               docs,
-                               collection_name,
-                               metadata: Optional[dict] = None,
-                               overwrite: bool = False,
-                               split: bool = True,
-                               add: bool = False,
-                               user=None,
-                               ) -> bool:
-        # This is where you handle splitting docs and putting their embeddings into the vdb collection
+   def delete_docs(self, collection_name, file_id):
+        # This is where you do things when the user deletes a Knowledge File
+        print("Handling deleting of a single file")
 
-        print("Handling splitting, embedding, and uploading")
+   def delete_collection(self, file_collection):
+        # This is where you do things when the user deletes a Knowledge Collection
+        print("Handling deleting of an entire collection")
 
-        return True # to mark that things completed successfully
+   def reset(self):
+        # This is handling the deletion of all Knowledges and Files
+        print("reseting everything")
+
+   def parse(self,
+              request: Request,
+              docs,
+              metadata: Optional[dict] = None,
+              user=None,
+              **kwargs
+              ) -> dict:
+        # This is where you handle splitting docs and returning them for use
+        print("Handling splitting and embedding")
+
+        # a dictionary of items for use
+        return {"texts": [], "embeddings": [], "metadatas": []}
+
+   def store(self, request, collection_name, texts, embeddings, metadatas, overwrite=False, add=True):
+        print("uploading information to vector database")
+
+   # THIS IS THE OPTIONAL METHOD
+   def is_applicable_to_item(self, item_id):
+        print(f"Based on item {item_id}, should this parser be applied? ")
+        return True
+```
+
+
+The Base `ParserInterface` can be inherited from to make sure that all methods are properly addressed
+
+```python
+class ParserInterface(ABC):
+    def is_applicable_to_item(self, item_id):
+        print(f"item id: {item_id}")
+        return True
+
+    @abstractmethod
+    def delete_doc(self, collection_name, file_id):
+        assert NotImplementedError
+
+    @abstractmethod
+    def delete_collection(self, file_collection):
+        assert NotImplementedError
+
+    @abstractmethod
+    def reset(self):
+        assert NotImplementedError
+
+    @abstractmethod
+    def parse(self,
+              request: Request,
+              docs,
+              metadata: Optional[dict] = None,
+              user=None,
+              **kwargs
+              ) -> dict:
+        assert NotImplementedError
+
+    @abstractmethod
+    def store(self, request, collection_name, texts, embeddings, metadatas, overwrite=False, add=True):
+        assert NotImplementedError
+
 ```
 
 
@@ -63,11 +117,19 @@ choices are:
 
 Any combination of these values (or a single one) is viable, though ALL supersedes other choices.
 
+### is_applicable_to_item
+
+For more fine grained control, the `is_applicable_to_item(self, item_id)` method can decide if a specific parser
+is applied to a specific file_type, url, search query, etc.
+
+NOTE: For a Parser to be called, it must be of the correct PARSER_TYPE and is_applicable_to_item() must return True.
+By default, is_applicable_to_item() will return True unless overridden
+
 
 ### Inheriting from DefaultParser
 
 Users may only care about changing one part of the custom Knowledge process (for example, you may want to
-split the document in a better way but don't want to handle embedding or uploading).
+split the document in a better way but don't want to handle embedding, uploading, or deleting).
 
 In this case, users can inherit from openwebui.utils.parser.DefaultParser, which handles needed all needed steps. Specific steps
 can then be overridden.
@@ -133,7 +195,7 @@ Just like other functions, Parsers can have Valves. More detailed information on
 ```python
 from open_webui.utils.parser import PARSER_TYPE
 
-class Parser:
+class Parser(DefaultParser):
     class Valves(BaseModel):
         MODEL_ID: str = Field(default="")
 
@@ -143,22 +205,19 @@ class Parser:
         self.parser_type = PARSER_TYPE.ALL
         self.valves = self.Valves()
 
-    def save_docs_to_vector_db(self,
-                               request: Request,
-                               docs,
-                               collection_name,
-                               metadata: Optional[dict] = None,
-                               overwrite: bool = False,
-                               split: bool = True,
-                               add: bool = False,
-                               user=None,
-                               ) -> bool:
+    def parse(self,
+              request: Request,
+              docs,
+              metadata: Optional[dict] = None,
+              user=None,
+              **kwargs
+              ) -> dict:
         # This is where you handle splitting docs and putting their embeddings into the vdb collection
 
         print(f"valve value: {self.valves.MODEL_ID}")
         print("Handling splitting, embedding, and uploading")
 
-        return True # to mark that things completed successfully
+        return {"texts": [], "embeddings": [], "metadatas": []}
 ```
 
 
@@ -170,3 +229,9 @@ class Parser:
 
 A: Parsers are the only Functions that occur when Knowledge is uploaded. Other functions can interact with Knowledge
 but none have control over how that Knowledge is handled by OpenWebUI.
+
+### **Q: Do I have to do anything else with the Knowledge after my Parsers have handled it?**
+
+A: No, unless you want to. By default, OpenWebUI will handling the RAG part of querying and will pull your parsed information
+from the relevant Knowledge container. However, if you instead want to do custom RAG or something non-default, [pipelines](../../../pipelines/pipes)
+may be a good way to handle that.
