Manually enable tools on models

--- a/docs/openapi-servers/open-webui.mdx
+++ b/docs/openapi-servers/open-webui.mdx
@@ -98,7 +98,13 @@ This ensures Open WebUI recognizes and communicates with each tool server correc
 
 ---
 
-## Step 3: Confirm Your Tool Server Is Connected ✅
+## Step 3: Enable the Tool Server on your desired model 💡
+
+Once your tool server is connected, you will need to manually enable it on the desired model.
+
+![Tool Server Enablement Toggle](/images/openapi-servers/open-webui/model-enable.gif)
+
+## Step 4: Confirm Your Tool Server Is Connected ✅
 
 Once your tool server is successfully connected, Open WebUI will display a 👇 tool server indicator directly in the message input area:
 
