--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -8,7 +8,7 @@ title: "🏢 Open WebUI for Enterprises"
 
 ## Built for Everyone, Backed by the Community  
 
-Open WebUI is completely free to use, with no restrictions or hidden limits.  
+Open WebUI is completely free to use as-is, with no restrictions or hidden limits.  
 
 It is **independently developed** and **sustained** by its users. **Optional** licenses are available to **support** ongoing development while providing **additional benefits** for businesses.
 
